rediseños de pantallas y asignaciones de usuarios a grupos y sitios